latest update -- partial UI

--- a/src/AttendanceManagement.Domain.Shared/Localization/AttendanceManagement/en.json
+++ b/src/AttendanceManagement.Domain.Shared/Localization/AttendanceManagement/en.json
@@ -1,9 +1,137 @@
 {
   "culture": "en",
   "texts": {
-    "AppName": "AttendanceManagement",
+    "AppName": "Attendance Management",
     "Menu:Home": "Home",
     "Welcome": "Welcome",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io."
+    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
+
+    "Menu:AttendanceManagement": "Attendance",
+    "Menu:MySchedule": "My Schedule",
+    "Menu:MyExceptionRequests": "My Requests",
+    "Menu:PendingApprovals": "Pending Approvals",
+    "Menu:Administration": "Administration",
+    "Menu:Employees": "Employees",
+    "Menu:Groups": "Groups",
+    "Menu:Schedules": "Schedules",
+    "Menu:Workflows": "Workflows",
+    "Menu:AllExceptionRequests": "All Requests",
+
+    "Employees": "Employees",
+    "NewEmployee": "New Employee",
+    "EditEmployee": "Edit Employee",
+    "EmployeeDetails": "Employee Details",
+    "Name": "Name",
+    "Department": "Department",
+    "Sector": "Sector",
+    "Group": "Group",
+    "Workflow": "Workflow",
+    "Status": "Status",
+    "Active": "Active",
+    "Inactive": "Inactive",
+    "Actions": "Actions",
+    "Details": "Details",
+    "Edit": "Edit",
+    "Delete": "Delete",
+    "Activate": "Activate",
+    "Deactivate": "Deactivate",
+    "Cancel": "Cancel",
+    "Save": "Save",
+    "Close": "Close",
+    "Submit": "Submit",
+
+    "Schedules": "Schedules",
+    "NewSchedule": "New Schedule",
+    "MySchedule": "My Schedule",
+    "ScheduleName": "Schedule Name",
+    "Description": "Description",
+    "WeeklySchedule": "Weekly Schedule",
+    "Day": "Day",
+    "OnSite": "On-Site",
+    "Remote": "Remote",
+    "WorkFromHome": "Work From Home",
+    "WorkLocation": "Work Location",
+    "OnSiteDays": "On-Site Days",
+    "SeatNumber": "Seat Number",
+    "Floor": "Floor",
+    "ViewDetails": "View Details",
+    "Assign": "Assign",
+    "AssignSchedule": "Assign Schedule",
+    "AssignToEmployee": "Assign to Employee",
+    "AssignToGroup": "Assign to Group",
+    "Employee": "Employee",
+    "SelectEmployee": "Select Employee",
+    "SelectGroup": "Select Group",
+    "EffectiveFrom": "Effective From",
+    "EffectiveTo": "Effective To",
+    "ExportToExcel": "Export to Excel",
+    "NoScheduleAssigned": "No schedule assigned to you yet.",
+    "Today": "Today",
+
+    "ExceptionRequests": "Exception Requests",
+    "MyExceptionRequests": "My Exception Requests",
+    "PendingApprovals": "Pending Approvals",
+    "NewRequest": "New Request",
+    "NewExceptionRequest": "New Exception Request",
+    "ExceptionDate": "Exception Date",
+    "Type": "Type",
+    "Sick": "Sick Leave",
+    "SpecialCondition": "Special Condition",
+    "Reason": "Reason",
+    "Date": "Date",
+    "SubmittedOn": "Submitted On",
+    "Pending": "Pending",
+    "Approved": "Approved",
+    "Rejected": "Rejected",
+    "Cancelled": "Cancelled",
+    "RequestDetails": "Request Details",
+    "Attachments": "Attachments",
+    "ApprovalHistory": "Approval History",
+    "Step": "Step",
+    "Approver": "Approver",
+    "Action": "Action",
+    "Notes": "Notes",
+    "OptionalNotes": "Optional notes...",
+    "Approve": "Approve",
+    "Reject": "Reject",
+    "ApproveRequest": "Approve Request",
+    "RejectRequest": "Reject Request",
+    "CurrentStep": "Current Step",
+    "NoPendingApprovals": "No pending approvals at this time.",
+    "OnlyScheduledOnsiteDays": "You can only request exceptions for scheduled on-site days.",
+    "SickRequestRequiresMedicalDocument": "Sick leave requests require medical documentation.",
+    "MedicalDocument": "Medical Document",
+    "AllowedFileTypes": "Allowed file types",
+
+    "Workflows": "Workflows",
+    "NewWorkflow": "New Workflow",
+    "WorkflowSteps": "Workflow Steps",
+
+    "Groups": "Groups",
+    "NewGroup": "New Group",
+    "GroupMembers": "Group Members",
+
+    "PrimaryManager": "Primary Manager",
+    "CurrentSchedule": "Current Schedule",
+    "Seat": "Seat",
+    "SelectUser": "Select User",
+    "UserName": "User Name",
+
+    "SuccessfullySaved": "Successfully saved!",
+    "SuccessfullyActivated": "Successfully activated!",
+    "SuccessfullyDeactivated": "Successfully deactivated!",
+    "SuccessfullyExported": "Successfully exported!",
+    "RequestSubmittedSuccessfully": "Request submitted successfully!",
+    "RequestApprovedSuccessfully": "Request approved successfully!",
+    "RequestRejectedSuccessfully": "Request rejected successfully!",
+    "RequestCancelledSuccessfully": "Request cancelled successfully!",
+
+    "ActivateConfirmation": "Are you sure you want to activate this employee?",
+    "DeactivateConfirmation": "Are you sure you want to deactivate this employee?",
+    "CancelRequestConfirmation": "Are you sure you want to cancel this request?",
+    "ApproveConfirmationMessage": "Are you sure you want to approve this request?",
+    "RejectConfirmationMessage": "Are you sure you want to reject this request?",
+
+    "ErrorLoadingSchedule": "Error loading schedule. Please try again."
   }
 }
