add email and CompanyId fields to employee

--- a/src/AttendanceManagement.Domain.Shared/Localization/AttendanceManagement/ar.json
+++ b/src/AttendanceManagement.Domain.Shared/Localization/AttendanceManagement/ar.json
@@ -22,6 +22,8 @@
     "EditEmployee": "تعديل الموظف",
     "EmployeeDetails": "تفاصيل الموظف",
     "Name": "الاسم",
+    "Email": "البريد الإلكتروني",
+    "CompanyId": "معرف الشركة",
     "Department": "القسم",
     "Sector": "القطاع",
     "Group": "المجموعة",
